# kairos_project

./: CMakeLists.txt  README.md  requirements.txt  start_kairos.bat
bindings/pykairos/: __init__.py
docs/: manifesto.md
engine/: main.cpp
engine/glad/include/glad/: glad.h
engine/glad/src/: glad.c
engine/render/: Grid.cpp  Grid.h
engine/simulation/three_bodies/: ThreeBodies.cpp  ThreeBodies.h
interface/: index.html  script.js  style.css
scripts/: startup.py
webview2/: version.txt
